// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel test Carousel rendered 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="innerWrapper"
      data-testid="carousel-inner-wrapper"
      style="transform: translateX(-0%);"
    />
    <div
      class="wrapper"
      data-testid="indicator-wrapper"
    />
  </div>
</div>
`;

exports[`Carousel test carousel rendered 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="innerWrapper"
      data-testid="carousel-inner-wrapper"
      style="transform: translateX(-0%);"
    />
    <div
      class="wrapper"
      data-testid="indicator-wrapper"
    />
  </div>
</div>
`;

exports[`Carousel test click Indicator of Carousel  1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="innerWrapper"
      data-testid="carousel-inner-wrapper"
      style="transform: translateX(-100%);"
    >
      <div
        class="carouselItem"
      >
        text1
      </div>
      <div
        class="carouselItem"
      >
        text2
      </div>
    </div>
    <div
      class="wrapper"
      data-testid="indicator-wrapper"
    >
      <div
        class="item"
      >
        <div
          class=""
          style=""
        />
      </div>
      <div
        class="item"
      >
        <div
          class="activeItem"
          style="transition-duration: 1000ms;"
        />
      </div>
    </div>
  </div>
</div>
`;
